# RegExTester

./: CMakeLists.txt  README.rst
installer/: RegExTester.desktop  inst_script.nsi
src/: RegExTester.cbp  RegExTesterApp.cpp  RegExTesterApp.h  RegExTesterMain.cpp  RegExTesterMain.h  regex_16.xpm  resource.rc  version.h
src/wxsmith/: RegExTesterdialog.wxs
